# django-async-backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  UPSTREAMING.md  docker-compose.yml  lets.yaml  pyproject.toml
.github/workflows/: ci.yml  test.yml
codemon/: .libcst.codemod.yaml  __main__.py  utils.py
codemon/config/: db__models__base.yaml  db__models__deletion.yaml  db__models__query.yaml  db__models__sql__compiler.yaml  db__models__sql__query.yaml  db__models__sql__subqueries.yaml
django_async_backend/: apps.py  middleware.py  test.py
django_async_backend/db/: __init__.py  sync_bridge.py  transaction.py  utils.py
django_async_backend/db/backends/: utils.py
django_async_backend/db/backends/base/: base.py
django_async_backend/db/backends/postgresql/: async_base.py  base.py
django_async_backend/db/models/: base.py  deletion.py  manager.py  query.py  related_managers.py
django_async_backend/db/models/sql/: __init__.py  compiler.py  query.py  subqueries.py
django_async_backend/utils/: connection.py  decorators.py
docs/proposals/: async-save-contract.md  vanilla_repro.py
docs/superpowers/specs/: 2026-04-12-async-related-managers-design.md
scripts/: codegen.sh
test_example/: README.md  app.py  manage.py
test_example/books/: models.py
test_example/test_example/: asgi.py  settings.py  urls.py  views.py  wsgi.py
tests/: conftest.py  settings.py  test_app.py  test_concurrency.py  test_middleware.py  test_rollback_testcase.py  test_test.py
tests/db/: test_close_old_async_connections.py  test_middleware.py  test_transaction.py  test_transaction_hooks.py  test_utils.py
tests/db/backend/: test_utils.py
tests/db/backends/: test_utils.py
tests/db/backends/base/: test_base.py
tests/db/backends/postgresql/: test_async_backend.py  test_base.py
tests/db/models/: test_async_model_init_subclass.py  test_async_save_contract.py  test_model_asave.py  test_model_asave_extended.py  test_query.py  test_signals.py
tests/db/models/base/: test_async_save.py
tests/db/models/query/: acount_test.py  test_aaggregate.py  test_aaggregate_django.py  test_abulk_create.py  test_abulk_update.py  test_acontains.py  test_acount.py  test_acreate.py  test_adelete.py  test_adelete_cascade.py  test_aearliest.py  test_aexists.py  test_aexplain.py  test_afirst.py  test_aget.py  test_aget_or_create.py  test_ain_bulk.py  test_aiter.py  test_aiterator.py  test_alast.py  test_alatest.py  test_annotate.py  test_annotate_extended.py  test_annotations_django.py  test_araw.py  test_aupdate.py  test_aupdate_or_create.py  test_complex_filter.py  test_dates.py  test_dates_django.py  test_defer_only.py  test_difference.py  test_distinct.py  test_exclude.py  test_expressions.py  test_extra.py  test_filter.py  test_getitem.py  test_intersection.py  test_lookups.py  (+16 more)
tests/db/models/sql/: test_subqueries.py
tests/expressions/: models.py
tests/fixtures/: __init__.py  containers.py  query_counter.py  reporter_table.py
tests/lookup/: models.py
tests/shared/: models.py
tests/test_app/: models.py
tests/test_app/migrations/: 0001_initial.py  0002_getorcreatemodel.py  0003_dbdefaultpkmodel.py  0004_deleteauthormodel_deletetaggedmodel_deletebookmodel_and_more.py
tests/utils/: test_connection.py  test_decorators.py
tests_django/: Dockerfile  docker-compose.yaml  entrypoint.sh  test_postgres.py
