[tool.poetry]
name = "django-async-backend"
version = "0.0.2"
description = "Django extension providing async capabilities for database and other components"
readme = "README.md"
authors = ["Arfey <arfey@gmail.com>"]
classifiers = [
    "Environment :: Web Environment",
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",

    "Framework :: Django",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
]
keywords = [
  "django",
  "asyncio",
  "database",
]
license = "MIT"
homepage = "https://github.com/Arfey/django-async-backend"
documentation = "https://github.com/Arfey/django-async-backend/blob/main/README.md"
repository = "https://github.com/Arfey/django-async-backend"

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=6"
psycopg = {extras = ["binary"], version = "^3"}
pydantic = "^2.12.5"


[tool.poetry.group.dev.dependencies]
coverage = "^7.13.4"
libcst = "^1.8.6"
psycopg = {extras = ["pool"], version = "^3"}
pyyaml = "^6.0.3"
requests = "^2.32.5"
uvicorn = "^0.38.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.darker]
line-length = 79

[tool.black]
line-length = 79

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
force_grid_wrap = 2
extend_skip_glob = ["*/migrations/*", "env/*"]

[tool.flake8]
max-line-length = 80
max-complexity = 12
exclude = [
    ".git",
    "env/",
    "django_async_backend/db/models/query.py",
    "django_async_backend/db/models/sql/compiler.py",
    "django_async_backend/db/models/sql/query.py",
]
extend-ignore = ["S001"]

[tool.bandit]
exclude_dirs = [
  "env",
  ".cache",
  "tests",
  ".mypy_cache",
  "django_async_backend/db/models/query.py",
  "django_async_backend/db/models/sql/compiler.py",
  "django_async_backend/db/models/sql/query.py",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true
