[project]
name = "django-async-backend"
version = "0.0.4"
description = "Django extension providing async capabilities for database and other components"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["django", "asyncio", "database", "postgresql", "async"]
authors = [{ name = "Arfey", email = "arfey@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["Django>=6", "psycopg[binary]>=3"]

[project.urls]
Homepage = "https://github.com/Arfey/django-async-backend"
Repository = "https://github.com/Arfey/django-async-backend.git"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "psycopg[pool]>=3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest==9.0.2",
  "ruff==0.15.8",
  "testcontainers==4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_async_backend"]

[tool.hatch.build.targets.sdist]
include = ["django_async_backend", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",    # Type annotations — will add incrementally
  "COM812", # Conflicts with ruff-format
  "D",      # Docstrings — will add incrementally
  "E501",   # Line length handled by config
  "EM",     # Exception strings inline are fine
  "FBT",    # Boolean params common in Django ORM API
  "PERF203", # try/except in loop is fine
  "PLR0913", # Too many args — Django ORM methods have many params
  "PLR2004", # Magic values are fine in ORM code
  "SLF001", # Private member access needed for Django internals
  "TRY003", # Long exception messages are helpful
  "ERA001", # Commented-out code — keeping some Django reference code
  "TRY002", # Raise vanilla exceptions (Django patterns)
  "TRY301", # Raise within try (Django patterns)
  "PLC0415", # Dynamic imports (intentional)
  "DJ008",  # Model __str__ (not relevant for backend internals)
  "N802",   # Function names (Django conventions)
  "N806",   # Variable names (Django conventions)
  "A002",   # Shadowing builtins (Django conventions)
  "UP031",  # printf-style formatting (Django's own code)
  "RUF012", # Mutable class attributes (Django patterns)
  "B017",   # assertRaises without match (unittest style)
  "S608",   # SQL injection (we build SQL programmatically)
  "C901",   # Complex functions (Django ORM is inherently complex)
  "PLR0912", # Too many branches (Django ORM)
  "PLR0915", # Too many statements (Django ORM)
  "S101",   # assert used in Django internals
  "PGH004", # noqa blanket (existing code)
  "EXE001", # Shebang (manage.py)
  "INP001", # Implicit namespace package
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG",    # Unused arguments common in fixtures
  "B007",   # Loop variable not used in body
  "B017",   # assertRaises without match
  "B018",   # Useless expression (Django test patterns)
  "BLE001", # Blind except (Django test patterns)
  "C403",   # Unnecessary list call
  "DTZ001", # Datetime without timezone (test data)
  "F841",   # Unused variables okay in tests
  "PERF401", # Use list comprehension (test readability preference)
  "PT006",  # Parametrize tuple style is preference
  "PT009",  # Use pytest.raises instead of unittest-style (we use unittest)
  "PT011",  # Broad pytest.raises okay
  "PT027",  # Use pytest assert instead of unittest-style (we use unittest)
  "PYI024", # NamedTuple vs TypedDict
  "RUF059", # Unpacked variables (fixture setup returns used for side effects)
  "S101",   # assert in tests
  "S105",   # Hardcoded passwords in test settings
  "S110",   # try/except/pass
  "SIM117", # Multiple with statements
  "SIM118", # Use key in dict
]
# Django-derived files — these are ported from Django's source with async modifications.
# Applying strict linting would require rewriting Django's own patterns.
"django_async_backend/db/models/query.py" = ["ALL"]
"django_async_backend/db/models/sql/compiler.py" = ["ALL"]
"django_async_backend/db/models/sql/query.py" = ["ALL"]
"django_async_backend/db/backends/**" = ["ALL"]
"django_async_backend/db/transaction.py" = ["ALL"]
"django_async_backend/db/utils.py" = ["ALL"]
"django_async_backend/utils/**" = ["ALL"]
"django_async_backend/db/models/base.py" = ["ALL"]
"django_async_backend/test.py" = ["ALL"]
"test_example/**" = ["ALL"]
"tests_django/**" = ["ALL"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
skip_covered = true
